--- a/Letter/de.lproj/Localizable.strings
+++ b/Letter/de.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "GIRAFFE" = "giraffe";
 "FISH" = "fisch";
 "SHEEP" = "schaf";
-"OCTOPUS" = "tintenfisch";
+"OCTOPUS" = "krake";
 "OWL" = "eule";
 
 "TUT_FIND" = "Finde den Charakter-Footprint";
